--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 *, ::before, ::after {
     box-sizing: border-box;
 }
@@ -7,7 +11,11 @@ body {
     padding: 0;
     margin: 0;
 
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Raleway', sans-serif;
+}
+hr {
+    border: 1px solid #fec5a3;
 }
 /* Стилизация кнопки для всплытия блока */
 .btn {
@@ -18,6 +26,7 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-family: 'Russo One', sans-serif;
 }
 .btn:hover {
     background: #3dc4e6;
@@ -114,7 +123,7 @@ body {
 .box-info {
     width: 900px;
     max-width: 100%;
-    height: 300px;
+    /* height: 300px; */
 
     margin: 0 auto;
     margin-top: 20px;
@@ -134,6 +143,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
+
+    padding: 10px;
 }
 .img-box {
     width: 100px;
@@ -143,8 +155,10 @@ body {
 @media (max-width: 900px) {
     .box-info {
         width: 380px;
-        height: 380px;
         transition: 0.5s;
+    }
+    .box-item {
+        text-align: center;
     }
     .box-skills {
         justify-content: space-between;
@@ -200,7 +214,6 @@ body {
     width: 100%;
     outline: none;
     padding: 5px;
-    color: #FFFFFF;
     background: #fec5a3;
     border: none;
     border-radius: 5px;
@@ -213,6 +226,7 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-family: 'Russo One', sans-serif;
 }
 .btn-send:hover {
     background: #3dc4e6;
